syntax = "proto3";

package temporal.cloud.api.v1;

option go_package = "go.temporal.io/cloud/api/cloud/v1;cloudv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/duration.proto";

// NamespaceService manages namespaces in Temporal Cloud.
service NamespaceService {
  // CreateNamespace creates a new namespace.
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);
  
  // GetNamespace retrieves a namespace by ID.
  rpc GetNamespace(GetNamespaceRequest) returns (GetNamespaceResponse);
  
  // UpdateNamespace updates a namespace.
  rpc UpdateNamespace(UpdateNamespaceRequest) returns (UpdateNamespaceResponse);
  
  // DeleteNamespace deletes a namespace.
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);
  
  // ListNamespaces lists namespaces in an organization.
  rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse);
  
  // AddSearchAttributes adds custom search attributes to a namespace.
  rpc AddSearchAttributes(AddSearchAttributesRequest) returns (AddSearchAttributesResponse);
  
  // RemoveSearchAttribute removes a custom search attribute from a namespace.
  rpc RemoveSearchAttribute(RemoveSearchAttributeRequest) returns (RemoveSearchAttributeResponse);
  
  // AddCertificateFilter adds a certificate filter to a namespace.
  rpc AddCertificateFilter(AddCertificateFilterRequest) returns (AddCertificateFilterResponse);
  
  // RemoveCertificateFilter removes a certificate filter from a namespace.
  rpc RemoveCertificateFilter(RemoveCertificateFilterRequest) returns (RemoveCertificateFilterResponse);
  
  // FailoverNamespace initiates a failover to the standby region.
  rpc FailoverNamespace(FailoverNamespaceRequest) returns (FailoverNamespaceResponse);
}

// Namespace represents a Temporal Cloud namespace.
message Namespace {
  // Unique identifier for the namespace.
  string id = 1;
  
  // Name of the namespace (unique within organization).
  string name = 2;
  
  // Organization ID.
  string organization_id = 3;
  
  // Region where the namespace is deployed.
  string region = 4;
  
  // Current state of the namespace.
  NamespaceState state = 5;
  
  // Namespace configuration.
  NamespaceConfig config = 6;
  
  // Namespace endpoints.
  NamespaceEndpoints endpoints = 7;
  
  // Custom search attributes.
  repeated SearchAttribute search_attributes = 8;
  
  // Certificate filters for mTLS.
  repeated CertificateFilter certificate_filters = 9;
  
  // Tags for organization.
  map<string, string> tags = 10;
  
  // Timestamp when the namespace was created.
  google.protobuf.Timestamp created_at = 11;
  
  // Timestamp when the namespace was last updated.
  google.protobuf.Timestamp updated_at = 12;
}

// NamespaceState represents the state of a namespace.
enum NamespaceState {
  NAMESPACE_STATE_UNSPECIFIED = 0;
  NAMESPACE_STATE_PENDING = 1;
  NAMESPACE_STATE_PROVISIONING = 2;
  NAMESPACE_STATE_ACTIVE = 3;
  NAMESPACE_STATE_UPDATING = 4;
  NAMESPACE_STATE_DELETING = 5;
  NAMESPACE_STATE_DELETED = 6;
  NAMESPACE_STATE_SUSPENDED = 7;
  NAMESPACE_STATE_FAILED = 8;
}

// NamespaceConfig contains namespace configuration.
message NamespaceConfig {
  // Retention period for workflow history.
  google.protobuf.Duration retention_period = 1;
  
  // Whether deletion protection is enabled.
  bool deletion_protected = 2;
  
  // High availability configuration.
  HighAvailabilityConfig ha_config = 3;
  
  // Codec server configuration.
  CodecServerConfig codec_server = 4;
}

// HighAvailabilityConfig contains HA configuration.
message HighAvailabilityConfig {
  // Whether multi-region HA is enabled.
  bool enabled = 1;
  
  // Standby region.
  string standby_region = 2;
  
  // Replication lag threshold for failover.
  google.protobuf.Duration failover_threshold = 3;
}

// CodecServerConfig contains codec server configuration.
message CodecServerConfig {
  // Codec server endpoint URL.
  string endpoint = 1;
  
  // Whether to pass access token to codec server.
  bool pass_access_token = 2;
  
  // Whether to include cross-origin credentials.
  bool include_credentials = 3;
}

// NamespaceEndpoints contains namespace connection endpoints.
message NamespaceEndpoints {
  // gRPC endpoint for SDK connections.
  string grpc_endpoint = 1;
  
  // Web UI endpoint.
  string web_endpoint = 2;
  
  // Metrics endpoint for Prometheus scraping.
  string metrics_endpoint = 3;
}

// SearchAttribute represents a custom search attribute.
message SearchAttribute {
  // Name of the search attribute.
  string name = 1;
  
  // Type of the search attribute.
  SearchAttributeType type = 2;
}

// SearchAttributeType defines search attribute types.
enum SearchAttributeType {
  SEARCH_ATTRIBUTE_TYPE_UNSPECIFIED = 0;
  SEARCH_ATTRIBUTE_TYPE_TEXT = 1;
  SEARCH_ATTRIBUTE_TYPE_KEYWORD = 2;
  SEARCH_ATTRIBUTE_TYPE_INT = 3;
  SEARCH_ATTRIBUTE_TYPE_DOUBLE = 4;
  SEARCH_ATTRIBUTE_TYPE_BOOL = 5;
  SEARCH_ATTRIBUTE_TYPE_DATETIME = 6;
  SEARCH_ATTRIBUTE_TYPE_KEYWORD_LIST = 7;
}

// CertificateFilter represents a certificate filter for mTLS.
message CertificateFilter {
  // Filter ID.
  string id = 1;
  
  // Common Name filter (regex).
  string common_name = 2;
  
  // Organization filter (regex).
  string organization = 3;
  
  // Organizational Unit filter (regex).
  string organizational_unit = 4;
  
  // Subject Alternative Name filter (regex).
  string subject_alternative_name = 5;
}

// CreateNamespaceRequest is the request for CreateNamespace.
message CreateNamespaceRequest {
  // Organization ID.
  string organization_id = 1;
  
  // Name of the namespace.
  string name = 2;
  
  // Region to deploy the namespace.
  string region = 3;
  
  // Namespace configuration.
  NamespaceConfig config = 4;
  
  // Tags for organization.
  map<string, string> tags = 5;
}

// CreateNamespaceResponse is the response for CreateNamespace.
message CreateNamespaceResponse {
  // The created namespace.
  Namespace namespace = 1;
  
  // Async operation ID for tracking provisioning.
  string operation_id = 2;
}

// GetNamespaceRequest is the request for GetNamespace.
message GetNamespaceRequest {
  // Namespace ID.
  string namespace_id = 1;
}

// GetNamespaceResponse is the response for GetNamespace.
message GetNamespaceResponse {
  // The namespace.
  Namespace namespace = 1;
}

// UpdateNamespaceRequest is the request for UpdateNamespace.
message UpdateNamespaceRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Updated namespace data.
  Namespace namespace = 2;
  
  // Fields to update.
  google.protobuf.FieldMask update_mask = 3;
}

// UpdateNamespaceResponse is the response for UpdateNamespace.
message UpdateNamespaceResponse {
  // The updated namespace.
  Namespace namespace = 1;
  
  // Async operation ID for tracking update.
  string operation_id = 2;
}

// DeleteNamespaceRequest is the request for DeleteNamespace.
message DeleteNamespaceRequest {
  // Namespace ID.
  string namespace_id = 1;
}

// DeleteNamespaceResponse is the response for DeleteNamespace.
message DeleteNamespaceResponse {
  // Async operation ID for tracking deletion.
  string operation_id = 1;
}

// ListNamespacesRequest is the request for ListNamespaces.
message ListNamespacesRequest {
  // Organization ID.
  string organization_id = 1;
  
  // Maximum number of namespaces to return.
  int32 page_size = 2;
  
  // Page token for pagination.
  string page_token = 3;
  
  // Filter by region.
  string region_filter = 4;
  
  // Filter by state.
  NamespaceState state_filter = 5;
}

// ListNamespacesResponse is the response for ListNamespaces.
message ListNamespacesResponse {
  // List of namespaces.
  repeated Namespace namespaces = 1;
  
  // Token for the next page.
  string next_page_token = 2;
}

// AddSearchAttributesRequest is the request for AddSearchAttributes.
message AddSearchAttributesRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Search attributes to add.
  repeated SearchAttribute search_attributes = 2;
}

// AddSearchAttributesResponse is the response for AddSearchAttributes.
message AddSearchAttributesResponse {
  // Async operation ID.
  string operation_id = 1;
}

// RemoveSearchAttributeRequest is the request for RemoveSearchAttribute.
message RemoveSearchAttributeRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Name of the search attribute to remove.
  string name = 2;
}

// RemoveSearchAttributeResponse is the response for RemoveSearchAttribute.
message RemoveSearchAttributeResponse {
  // Async operation ID.
  string operation_id = 1;
}

// AddCertificateFilterRequest is the request for AddCertificateFilter.
message AddCertificateFilterRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Certificate filter to add.
  CertificateFilter certificate_filter = 2;
}

// AddCertificateFilterResponse is the response for AddCertificateFilter.
message AddCertificateFilterResponse {
  // The added certificate filter.
  CertificateFilter certificate_filter = 1;
}

// RemoveCertificateFilterRequest is the request for RemoveCertificateFilter.
message RemoveCertificateFilterRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Certificate filter ID.
  string filter_id = 2;
}

// RemoveCertificateFilterResponse is the response for RemoveCertificateFilter.
message RemoveCertificateFilterResponse {}

// FailoverNamespaceRequest is the request for FailoverNamespace.
message FailoverNamespaceRequest {
  // Namespace ID.
  string namespace_id = 1;
  
  // Target region for failover.
  string target_region = 2;
}

// FailoverNamespaceResponse is the response for FailoverNamespace.
message FailoverNamespaceResponse {
  // Async operation ID for tracking failover.
  string operation_id = 1;
}
