package workflows

import (
	"context"
	"fmt"

	"go.temporal.io/cloud/internal/repository"
	"go.temporal.io/server/common/log"
)

// Activities holds dependencies for workflow activities.
type Activities struct {
	repos  *repository.Repositories
	logger log.Logger
}

// NewActivities creates a new activities instance.
func NewActivities(repos *repository.Repositories, logger log.Logger) *Activities {
	return &Activities{repos: repos, logger: logger}
}

// SelectClusterActivity selects a cluster for namespace provisioning.
func (a *Activities) SelectClusterActivity(ctx context.Context, input SelectClusterInput) (string, error) {
	// TODO: Implement cluster selection logic
	// For now, return a mock cluster ID based on region
	clusterID := fmt.Sprintf("cluster-%s-001", input.Region)
	return clusterID, nil
}

// GenerateCertificatesActivity generates mTLS certificates.
func (a *Activities) GenerateCertificatesActivity(ctx context.Context, input GenerateCertificatesInput) (*GenerateCertificatesOutput, error) {
	// TODO: Implement certificate generation
	return &GenerateCertificatesOutput{
		CertificatePEM: "-----BEGIN CERTIFICATE-----\n...\n-----END CERTIFICATE-----",
		Fingerprint:    "sha256:abc123...",
	}, nil
}

// RegisterNamespaceActivity registers a namespace in the Temporal cluster.
func (a *Activities) RegisterNamespaceActivity(ctx context.Context, input RegisterNamespaceInput) (*RegisterNamespaceOutput, error) {
	// TODO: Call Temporal Admin API to register namespace
	return &RegisterNamespaceOutput{Success: true}, nil
}

// CreateDNSRecordActivity creates DNS records for the namespace.
func (a *Activities) CreateDNSRecordActivity(ctx context.Context, input CreateDNSRecordInput) (*CreateDNSRecordOutput, error) {
	// TODO: Create Route53 DNS records
	return &CreateDNSRecordOutput{
		GRPCEndpoint:    fmt.Sprintf("%s.%s.tmprl.cloud:7233", input.NamespaceID, input.Region),
		WebEndpoint:     fmt.Sprintf("https://%s.%s.tmprl.cloud", input.NamespaceID, input.Region),
		MetricsEndpoint: fmt.Sprintf("https://metrics.%s.tmprl.cloud/prometheus", input.Region),
	}, nil
}

// UpdateNamespaceStateActivity updates the namespace state in the database.
func (a *Activities) UpdateNamespaceStateActivity(ctx context.Context, input UpdateNamespaceStateInput) error {
	return a.repos.Namespaces.UpdateState(ctx, input.NamespaceID, input.State)
}

// SetupStandbyRegionActivity sets up a standby region for HA.
func (a *Activities) SetupStandbyRegionActivity(ctx context.Context, input SetupStandbyInput) error {
	// TODO: Implement standby region setup
	return nil
}

// DeprecateNamespaceActivity deprecates a namespace in the Temporal cluster.
func (a *Activities) DeprecateNamespaceActivity(ctx context.Context, namespaceID string) error {
	// TODO: Call Temporal Admin API to deprecate namespace
	return nil
}

// RemoveDNSRecordActivity removes DNS records for a namespace.
func (a *Activities) RemoveDNSRecordActivity(ctx context.Context, namespaceID string) error {
	// TODO: Remove Route53 DNS records
	return nil
}

// ArchiveNamespaceActivity archives namespace data to S3.
func (a *Activities) ArchiveNamespaceActivity(ctx context.Context, namespaceID string) error {
	// TODO: Archive to S3
	return nil
}

// VerifyStandbyReadyActivity verifies the standby is ready for failover.
func (a *Activities) VerifyStandbyReadyActivity(ctx context.Context, input FailoverNamespaceInput) error {
	// TODO: Check replication lag, standby health
	return nil
}

// FencePrimaryActivity fences the primary to stop accepting writes.
func (a *Activities) FencePrimaryActivity(ctx context.Context, namespaceID string) error {
	// TODO: Implement primary fencing
	return nil
}

// PromoteStandbyActivity promotes the standby to primary.
func (a *Activities) PromoteStandbyActivity(ctx context.Context, input FailoverNamespaceInput) error {
	// TODO: Promote standby
	return nil
}

// UpdateDNSForFailoverActivity updates DNS for failover.
func (a *Activities) UpdateDNSForFailoverActivity(ctx context.Context, input FailoverNamespaceInput) error {
	// TODO: Update DNS records
	return nil
}

// VerifyTrafficSwitchedActivity verifies traffic has switched to new primary.
func (a *Activities) VerifyTrafficSwitchedActivity(ctx context.Context, input FailoverNamespaceInput) error {
	// TODO: Verify traffic
	return nil
}

// Billing activities

// AggregateUsageActivity aggregates usage for a billing period.
func (a *Activities) AggregateUsageActivity(ctx context.Context, input AggregateUsageInput) (*UsageSummaryOutput, error) {
	// TODO: Implement usage aggregation
	return &UsageSummaryOutput{
		TotalActions:       0,
		ActiveStorageGBH:   0,
		RetainedStorageGBH: 0,
	}, nil
}

// GenerateInvoiceActivity generates an invoice.
func (a *Activities) GenerateInvoiceActivity(ctx context.Context, input GenerateInvoiceInput) (string, error) {
	// TODO: Generate invoice
	return "inv-123", nil
}

// ReportStripeUsageActivity reports usage to Stripe.
func (a *Activities) ReportStripeUsageActivity(ctx context.Context, input ReportStripeUsageInput) error {
	// TODO: Report to Stripe
	return nil
}

// SendInvoiceEmailActivity sends an invoice email.
func (a *Activities) SendInvoiceEmailActivity(ctx context.Context, input SendInvoiceEmailInput) error {
	// TODO: Send email via SendGrid
	return nil
}

// SendPaymentReminderActivity sends a payment reminder.
func (a *Activities) SendPaymentReminderActivity(ctx context.Context, input SendPaymentReminderInput) error {
	// TODO: Send reminder email
	return nil
}

// CheckInvoicePaidActivity checks if an invoice is paid.
func (a *Activities) CheckInvoicePaidActivity(ctx context.Context, invoiceID string) (bool, error) {
	// TODO: Check Stripe invoice status
	return false, nil
}

// SuspendAccountActivity suspends an account for non-payment.
func (a *Activities) SuspendAccountActivity(ctx context.Context, orgID string) error {
	// TODO: Suspend account
	return nil
}

// ListActiveOrganizationsActivity lists all active organizations.
func (a *Activities) ListActiveOrganizationsActivity(ctx context.Context) ([]string, error) {
	// TODO: List organizations
	return []string{}, nil
}

// AggregateOrgUsageActivity aggregates usage for a single organization.
func (a *Activities) AggregateOrgUsageActivity(ctx context.Context, input AggregateOrgUsageInput) error {
	// TODO: Aggregate usage
	return nil
}
